--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "amcharts": "~3.15.2",
     "amcharts-stock": "*",
     "ammap": "~3.14.5",
-    "angular": "^1.5.6",
+    "angular": "~1.5.6",
     "angular-route": "~1.4.6",
     "angular-slimscroll": "~1.1.5",
     "angular-smart-table": "^2.1.8",
@@ -54,7 +54,7 @@
     "textAngular": "~1.4.6",
     "angular-xeditable": "~0.1.9",
     "ng-js-tree": "~0.0.7",
-    "angular-cookies": "^1.5.6",
+    "angular-cookies": "1.4.14",
     "ngAnimate": "*",
     "api-check": "^7.5.5",
     "angular-formly": "^8.2.1",
