--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,7 @@
     "jquery-ui": "~1.11.4",
     "jquery.easing": "~1.3.1",
     "jquery.easy-pie-chart": "~2.1.6",
-    "leaflet": "~0.7.7",
+    "leaflet": "~1.0.0",
     "moment": "^2.13.0",
     "slimScroll": "jquery-slimscroll#~1.3.6",
     "angular-progress-button-styles": "~0.1.0",
@@ -73,7 +73,9 @@
     "angularjs-dropdown-multiselect": "*",
     "Leaflet.EasyButton": "^1.3.1",
     "jspdf": "^1.3.2",
-    "html2canvas": "^0.4.1"
+    "html2canvas": "^0.4.1",
+    "install": "^1.0.4",
+    "leaflet.markercluster": "^1.0.4"
   },
   "overrides": {
     "amcharts": {
