--- a/bower.json
+++ b/bower.json
@@ -75,7 +75,8 @@
     "jspdf": "^1.3.2",
     "html2canvas": "^0.4.1",
     "install": "^1.0.4",
-    "leaflet.markercluster": "^1.0.4"
+    "leaflet.markercluster": "^1.0.4",
+    "leaflet-sidebar": "^0.1.9"
   },
   "overrides": {
     "amcharts": {
